<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="homePageFragment"
            type="com.example.truth_or_dare.ui.HomePageFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/root_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_animation"
        tools:context=".ui.HomePageFragment">

        <TextView
            android:id="@+id/question_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:fontFamily="@font/blue_cherries"
            android:text="@string/truth_or_dare"
            android:textAlignment="center"
            android:textColor="@color/primaryDarkColor"
            android:textSize="60sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/brain_iv"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/brain"
            app:layout_constraintBottom_toTopOf="@+id/play_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/question_button"
            android:contentDescription="@string/home_page_brain_icon_content_des"/>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/play_button"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="70dp"
            android:elevation="100dp"
            android:onClick="@{() -> homePageFragment.play()}"
            android:text="@string/play_button"
            android:textColor="@color/secondaryLightColor"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/brain_iv" />

        <Button
            android:id="@+id/add_button"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="4dp"
            android:elevation="40dp"
            android:onClick="@{() -> homePageFragment.question()}"
            android:text="@string/add_button"
            android:textColor="@color/secondaryLightColor"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="@+id/play_button"
            app:layout_constraintStart_toStartOf="@+id/play_button"
            app:layout_constraintTop_toBottomOf="@+id/play_button" />

        <Button
            android:id="@+id/bottleSpin_button"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="4dp"
            android:onClick="@{() -> homePageFragment.bottleSpin()}"
            android:text="@string/bottle"
            android:textColor="@color/secondaryLightColor"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="@+id/add_button"
            app:layout_constraintStart_toStartOf="@+id/add_button"
            app:layout_constraintTop_toBottomOf="@+id/add_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>