<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.example.truth_or_dare.viewmodels.QuestionViewModel" />

        <variable
            name="name"
            type="String" />

        <variable
            name="createPlayersDialogFragment"
            type="com.example.truth_or_dare.ui.CreatePlayersDialogFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_background"
        tools:context=".CreatePlayersDialogFragment">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/players_tv"
            android:textColor="@color/primaryColor"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/recycler_view"
            app:layout_constraintEnd_toEndOf="@+id/recycler_view"
            app:layout_constraintStart_toStartOf="@+id/recycler_view"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            listData="@{viewModel.players}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="true"
            android:padding="10dp"
            android:scrollbars="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_max="250dp"
            app:layout_constraintHeight_min="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:itemCount="4"
            tools:layout_editor_absoluteX="0dp"
            tools:listitem="@layout/player_item" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/player_name_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="@id/recycler_view"
            app:layout_constraintStart_toStartOf="@id/recycler_view"
            app:layout_constraintTop_toBottomOf="@id/recycler_view">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pass_player"
                android:onTextChanged="@{() -> viewModel.updateCurrentPlayer(editText.getText().toString())}"
                android:text="@{viewModel.player.name.toString()}"

                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginBottom="10dp"
            android:onClick="@{() -> viewModel.addPlayer()}"
            android:text="@string/add_player"
            android:textColor="@color/secondaryLightColor"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/player_name_input" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/play_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:onClick="@{() -> viewModel.players.isEmpty() ? createPlayersDialogFragment.error() :  createPlayersDialogFragment.play()}"
            android:text="@string/play_btn"
            android:textColor="@color/secondaryLightColor"
            app:layout_constraintBottom_toBottomOf="@id/add_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/add_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>

