<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="questionListFragment"
            type="com.example.truth_or_dare.ui.QuestionListFragment" />

        <variable
            name="questionViewModel"
            type="com.example.truth_or_dare.viewmodels.QuestionViewModel" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/question_list_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/question_list"
                android:textColor="@color/primaryColor"
                android:textSize="40sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                questionListData="@{questionViewModel.allQuestions}"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="8dp"
                android:clipToPadding="false"
                android:paddingBottom="40dp"
                android:scrollbars="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/question_list_tv"
                app:layout_constraintVertical_bias="0.0"
                tools:listitem="@layout/question_item" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/bottom_menu"
            style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_gravity="bottom"
            android:gravity="bottom"
            android:padding="8dp"
            app:elevation="16dp"
            app:fabAlignmentMode="end"
            app:fabCradleMargin="6dp"
            app:fabCradleRoundedCornerRadius="10dp"
            app:hideOnScroll="true">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/question_input_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_background"
                app:boxBackgroundColor="@color/primaryLightColor"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/question_input_et"
                    android:layout_width="260dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_background"
                    android:hint="@string/add_question"
                    android:text="@{questionViewModel.editTextQuestion.toString()}"
                    android:textSize="18sp" />

            </com.google.android.material.textfield.TextInputLayout>
        </com.google.android.material.bottomappbar.BottomAppBar>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/materialButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> questionViewModel.addQuestion(questionInputEt.getText().toString())}"
            android:src="@drawable/ic_baseline_add_24"
            app:layout_anchor="@id/bottom_menu"
            app:tint="@color/primaryColor"
            android:contentDescription="@string/add_question_FAB" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>